--- a/qt/ecmcAxis.ui
+++ b/qt/ecmcAxis.ui
@@ -36,7 +36,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>313</y>
+     <y>335</y>
      <width>71</width>
      <height>24</height>
     </rect>
@@ -80,7 +80,7 @@
      <x>232</x>
      <y>8</y>
      <width>82</width>
-     <height>301</height>
+     <height>321</height>
     </rect>
    </property>
    <property name="minimumSize">
@@ -748,7 +748,7 @@
     <property name="geometry">
      <rect>
       <x>65</x>
-      <y>230</y>
+      <y>252</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -800,7 +800,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>228</y>
+      <y>250</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -813,6 +813,64 @@
     </property>
     <property name="text">
      <string>error:</string>
+    </property>
+   </widget>
+   <widget class="caLed" name="caled_28">
+    <property name="geometry">
+     <rect>
+      <x>65</x>
+      <y>230</y>
+      <width>14</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="rectangular">
+     <bool>true</bool>
+    </property>
+    <property name="gradientEnabled">
+     <bool>false</bool>
+    </property>
+    <property name="ledWidth">
+     <number>12</number>
+    </property>
+    <property name="ledHeight">
+     <number>12</number>
+    </property>
+    <property name="channel" stdset="0">
+     <string notr="true">$(DEV):$(Axis)-Blocked</string>
+    </property>
+    <property name="falseColor">
+     <color>
+      <red>0</red>
+      <green>85</green>
+      <blue>0</blue>
+     </color>
+    </property>
+    <property name="trueColor">
+     <color>
+      <red>170</red>
+      <green>0</green>
+      <blue>0</blue>
+     </color>
+    </property>
+   </widget>
+   <widget class="caLabel" name="calabel_57">
+    <property name="geometry">
+     <rect>
+      <x>-7</x>
+      <y>230</y>
+      <width>69</width>
+      <height>18</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>69</width>
+      <height>18</height>
+     </size>
+    </property>
+    <property name="text">
+     <string>blocked</string>
     </property>
    </widget>
   </widget>
@@ -3736,7 +3794,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>278</y>
+     <y>300</y>
      <width>32</width>
      <height>18</height>
     </rect>
@@ -3758,7 +3816,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>258</y>
+     <y>280</y>
      <width>69</width>
      <height>18</height>
     </rect>
@@ -3906,6 +3964,45 @@
    </property>
    <property name="args">
     <string>P=$(DEV):,M=$(Axis)</string>
+   </property>
+  </widget>
+  <widget class="caLabel" name="calabel_2">
+   <property name="geometry">
+    <rect>
+     <x>15</x>
+     <y>315</y>
+     <width>201</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>BLOCKED</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+   <property name="foreground">
+    <color>
+     <red>239</red>
+     <green>41</green>
+     <blue>41</blue>
+    </color>
+   </property>
+   <property name="background">
+    <color>
+     <red>238</red>
+     <green>238</green>
+     <blue>236</blue>
+    </color>
+   </property>
+   <property name="visibility">
+    <enum>caLabel::IfNotZero</enum>
+   </property>
+   <property name="visibilityCalc">
+    <string notr="true"/>
+   </property>
+   <property name="channel" stdset="0">
+    <string notr="true">$(DEV):$(Axis)-Blocked</string>
    </property>
   </widget>
  </widget>
