--- a/scripts/jinja2/templates/epicsAxis.jinja2
+++ b/scripts/jinja2/templates/epicsAxis.jinja2
@@ -10,12 +10,13 @@ ecmcEpicsEnvSetCalcTernary(V_DRVL,"{{ monitoring.velocity.enable|default(0)|int 
 ecmcEpicsEnvSetCalcTernary(V_DRVH,"{{ monitoring.velocity.enable|default(0)|int }}>0",{{ monitoring.velocity.max|default(0.0) }} ,0)
 
 {%- set homing = None if homing is undefined else homing%}
-dbLoadRecords("ecmcAxis.db","P=${ECMC_PREFIX},AXIS_NAME='{{ epics.name }}',EGU='{{ epics.unit }}',PREC={{ epics.precision }},AXIS_NO={{ axis.id }},HOMEPROC={{ homing.type|default(0)|int }},PORT=${ECMC_ASYN_PORT},ADDR=0,TIMEOUT=1,T_SMP_MS=${ECMC_SAMPLE_RATE_MS},TSE=${ECMC_TSE},VELO={{ trajectory.axis.velocity }},V_DRVL=${V_DRVL=0},V_DRVH=${V_DRVH=0},TWKDST={{ axis.tweakDist|default(0.0)|float }}, GRP_NAME={{ axis.group |default('No group')}}")
+dbLoadRecords("ecmcAxis.db","P=${ECMC_PREFIX},AXIS_NAME='{{ epics.name }}',EGU='{{ epics.unit }}',PREC={{ epics.precision }},AXIS_NO={{ axis.id }},HOMEPROC={{ homing.type|default(0)|int }},PORT=${ECMC_ASYN_PORT},ADDR=0,TIMEOUT=1,T_SMP_MS=${ECMC_SAMPLE_RATE_MS},TSE=${ECMC_TSE},VELO={{ trajectory.axis.velocity }},V_DRVL=${V_DRVL=0},V_DRVH=${V_DRVH=0},TWKDST={{ axis.tweakDist|default(0.0)|float }}, GRP_NAME={{ axis.group |default('No group')}}, GRP_ID=${ECMC_AXIS_GRP_ID=-1}")
 #- save PREC for use if encoder is added
 epicsEnvSet(ECMC_AXIS_PREC,{{ epics.precision }})
 #- Cleanup if needed
 epicsEnvUnset(V_DRVL)
 epicsEnvUnset(V_DRVH)
+epicsEnvUnset(ECMC_AXIS_GRP_ID)
 
 {%- if (homing) and (encoder.homing) %}
    # ERROR: Duplicate homing parameters identified (homing and encoder.homing)
